--- a/contact.html
+++ b/contact.html
@@ -46,20 +46,19 @@
         <div class="contact-form container__elem">
             <form class="escape__form form" action="https://formspree.io/f/myyayayg" method="POST">
                 <div class="form__container">
-                    <h2 class="form__title">Ready to Escape?</h2>
+                    <h2 class="form__title">Залиш свій відгук</h2>
                     <p class="form__text">
-                        Complete the form below, specify the room, the date and the quantity of players, and
-                        we will contact you to confirm your booking.
+                       Щоб ми могли ставати кращими, напиши свій відгук про нас 
                     </p>
-                    <input class="form__fullname form__elem" name="fullname" type="text" placeholder="Enter your full name*"
+                    <input class="form__fullname form__elem" name="fullname" type="text" placeholder="Ведіть ваше імʼя *"
                         required />
                     <input class="form__phonenumber form__elem" name="phonenumber" pattern="[0-9]{7}" type="tel"
-                        placeholder="Enter your phone number*" required />
-                    <input class="form__email form__elem" name="email" type="email" placeholder="Enter your e-mail*"
+                        placeholder="Введіть ваш номер телефону *" required />
+                    <input class="form__email form__elem" name="email" type="email" placeholder="Введіть ваш email*"
                         required />
                     <input class="form__specifydetails form__elem" name="details" type="text"
-                        placeholder="Specify the details" />
-                    <button class="form__submit form__elem" type="submit">Start a Quest!</button>
+                        placeholder="Ваш відгук" />
+                    <button class="form__submit form__elem" type="submit">Надіслати</button>
                 </div>
             </form>
         </div>
