--- a/about_us.html
+++ b/about_us.html
@@ -8,13 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="css/alert.css">
+    <link rel="stylesheet" href="css/about-us.css">
     <link rel="shortcut icon" href="img/baby-yoda.svg" type="image/x-icon">
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#">Sticker</a>
+                <a class="navbar-brand" href="index.html">Sticker</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -23,8 +24,8 @@
                     <div class="navbar-nav ">
                         <a class="nav-link" href="index.html">Продукти</a>
                         <a class="nav-link" href="index.html">Відгуки</a>
-                        <a class="nav-link" href="contact.html">Контакти</a>
-                        <a class="nav-link" href="#">Про нас</a>
+                        <a class="nav-link" href="contact.html">Написати нам</a>
+                        <a class="nav-link" href="about_us.html">Про нас</a>
                         <a class="nav-link cart" href="#" data-bs-toggle="modal" data-bs-target="#modal-cart">
                             Кошик
                             <span class="badge bg-dark cart-badge"></span>
@@ -66,16 +67,30 @@
         </div>
     </div>
     <div class="about_us">
-        <h1> Про нас</h1>
-        <p>Ми - команда ентузіастів, які займаються створенням і продажем стікерів різних форм, розмірів та дизайнів.
-        Наша місія полягає в тому, щоб надати нашим клієнтам високоякісні та креативні стікери, які допоможуть виразити їхні
-        почуття, ідеї та особистість.
-        Наші клієнти для нас є найважливішими, тому ми завжди стежимо за їхніми потребами та запитами. Якщо у вас є будь-які
-        питання, пропозиції або проблеми з нашими стікерами, будь ласка, зв'яжіться з нами, і ми з радістю допоможемо вам.
-         Дякуємо, що обрали наш інтернет-магазин стікерів! Ми надіємося, що наші стікери додадуть яскравості та креативності
-         вашому життю.</p>
+        <div class="about_us_img">
+            <div class="firstimg">
+                <img src="img/baby-yoda.svg" alt="baby-yoda">
+            </div>
+           <div class="secondimg">
+            <img src="img/girl.svg" alt="">
+           </div>
+
+        </div>
+        <h1 class="title-about-us"> Про нас</h1>
+        <p class="info-about-us">Ми - команда ентузіастів, які займаються створенням і продажем стікерів різних форм,
+            розмірів та дизайнів.
+            Наша місія полягає в тому, щоб надати нашим клієнтам високоякісні та креативні стікери, які допоможуть
+            виразити їхні
+            почуття, ідеї та особистість.
+            Наші клієнти для нас є найважливішими, тому ми завжди стежимо за їхніми потребами та запитами. Якщо у вас є
+            будь-які
+            питання, пропозиції або проблеми з нашими стікерами, будь ласка, зв'яжіться з нами, і ми з радістю
+            допоможемо вам.
+            Дякуємо, що обрали наш інтернет-магазин стікерів! Ми надіємося, що наші стікери додадуть яскравості та
+            креативності
+            вашому життю.</p>
     </div>
-    
+
     <footer class="footer">
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
@@ -88,8 +103,8 @@
                     <div class="navbar-nav ">
                         <a class="nav-link" href="index.html">Продукти</a>
                         <a class="nav-link" href="index.html">Відгуки</a>
-                        <a class="nav-link" href="contact.html">Контакти</a>
-                        <a class="nav-link" href="#">Про нас</a>
+                        <a class="nav-link" href="contact.html">Написати нам</a>
+                        <a class="nav-link" href="about_us.html">Про нас</a>
                     </div>
                 </div>
                 <div class="collapse navbar-collapse" id="navbar">
