--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#">Sticker</a>
+                <a class="navbar-brand" href="index.html">Sticker</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,8 +24,8 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     <div class="navbar-nav ">
                         <a class="nav-link" href="#products">Продукти</a>
-                        <a class="nav-link" href="#reviews1">Відгуки</a>
-                        <a class="nav-link" href="contact.html">Контакти</a>
+                        <a class="nav-link" href="#reviews_title">Відгуки</a>
+                        <a class="nav-link" href="contact.html">Написати нам</a>
                         <a class="nav-link" href="about_us.html">Про нас</a>
                         <a class="nav-link cart" href="#" data-bs-toggle="modal" data-bs-target="#modal-cart">
                             Кошик
@@ -156,7 +156,7 @@
     <footer class="footer">
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#">Sticker</a>
+                <a class="navbar-brand" href="index.html">Sticker</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -164,8 +164,8 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     <div class="navbar-nav ">
                         <a class="nav-link" href="#products">Продукти</a>
-                        <a class="nav-link" href="#reviews1">Відгуки</a>
-                        <a class="nav-link" href="contact.html">Контакти</a>
+                        <a class="nav-link" href="#reviews_title">Відгуки</a>
+                        <a class="nav-link" href="contact.html">Написати нам</a>
                         <a class="nav-link" href="about_us.html">Про нас</a>
                         </a>
                     </div>
