--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#">Sticker</a>
+                <a class="navbar-brand" href="index.html">Sticker</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,14 +24,13 @@
                     <div class="navbar-nav ">
                         <a class="nav-link" href="index.html">Продукти</a>
                         <a class="nav-link" href="index.html">Відгуки</a>
-                        <a class="nav-link" href="#">Контакти</a>
+                        <a class="nav-link" href="contact.html">Написати нам</a>
                         <a class="nav-link" href="about_us.html">Про нас</a>
                         <a class="nav-link cart" href="#" data-bs-toggle="modal" data-bs-target="#modal-cart">
                             Кошик
                             <span class="badge bg-dark cart-badge"></span>
                         </a>
                     </div>
-
                 </div>
             </div>
         </nav>
@@ -96,7 +95,7 @@
     <footer class="footer">
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#">Sticker</a>
+                <a class="navbar-brand" href="index.html">Sticker</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -105,7 +104,7 @@
                     <div class="navbar-nav ">
                         <a class="nav-link" href="index.html">Продукти</a>
                         <a class="nav-link" href="index.html">Відгуки</a>
-                        <a class="nav-link" href="#">Контакти</a>
+                        <a class="nav-link" href="contact.html">Написати нам</a>
                         <a class="nav-link" href="about_us.html">Про нас</a>
                         </a>
                     </div>
