Add Homework Task

--- a/index.html
+++ b/index.html
@@ -142,6 +142,18 @@
                                 <label for="client-email" class="col-4 col-form-label">Ваш email:</label>
                                 <input class="form-control col-8" type="email" id="client-email" name="email" required>
                             </div>
+                            <div class="form-group row">
+                                <label for="client-name" class="col-4 col-form-label">Номер картки:</label>
+                                <input class="form-control col-8" type="text" id="client-card" name="card" required>
+                            </div>
+                            <div class="form-group row">
+                                <label for="client-name" class="col-4 col-form-label">Місця/рік:</label>
+                                <input class="form-control col-8" type="text" id="client-card" name="card" required>
+                            </div>
+                            <div class="form-group row">
+                                <label for="client-name" class="col-4 col-form-label">Код безпеки:</label>
+                                <input class="form-control col-8" type="text" id="client-card" name="card" required>
+                            </div>
                         </form>
                     </div>
                 </div>
